# pigeon

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: chart.yml  image.yml  pipeline.yml
chart/: Chart.yaml  values.yaml
chart/templates/: deployment.yaml
src/: mailer.rs  main.rs
