[package]
name = "pigeon"
version = "0.1.0"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-smtp = "0.3"
async-std = { version = "1.9.0", features = ["attributes"] }
rand = "0.8"
gethostname  = "0.2"
tide = "0.15"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
