[package]
name = "pigeon"
version = "0.1.0"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-smtp = "0.3.4"
async-std = { version = "1.9.0", features = ["attributes"] }
rand = "0.8.3"
gethostname  = "0.2.1"
tide = "0.16.0"
serde = { version = "1.0.123", features = ["derive"] }
anyhow = "1.0.38"
serde_json = "1.0.62"
