[package]
name = "pigeon"
version = "0.1.0"
authors = ["Boban Acimovic <boban.acimovic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { version = "1.0.123", features = ["derive"] }
# anyhow = "1.0.38"
# serde_json = "1.0.62"
lettre = { version = "0.10.0-alpha.4", features = ["smtp-transport", "tokio1", "tokio1-native-tls", "builder"] }
tokio = { version = "1.2.0", features = ["full"] }
